[gd_scene load_steps=6 format=3 uid="uid://t3v3lvtccgrc"]

[ext_resource type="Theme" uid="uid://brt1frgstdh0o" path="res://ingame_theme.tres" id="1_cjkii"]
[ext_resource type="Script" path="res://hud/IngameMenu.gd" id="1_qo3vw"]
[ext_resource type="AudioStream" uid="uid://cg8jsisjkwk35" path="res://sound/menuGeneralesSeleccion.wav" id="3_aqnkd"]
[ext_resource type="AudioStream" uid="uid://dvfuvhq2abo35" path="res://sound/menuGeneralesMover.wav" id="4_8fx5q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_de824"]
bg_color = Color(0.203922, 0.407843, 0.337255, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.878431, 0.972549, 0.815686, 1)
anti_aliasing = false

[node name="IngameMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
theme = ExtResource("1_cjkii")
script = ExtResource("1_qo3vw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 56.0
mouse_filter = 2
theme = ExtResource("1_cjkii")
theme_override_styles/panel = SubResource("StyleBoxFlat_de824")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_cjkii")

[node name="Inventory" type="Button" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Finish")
focus_neighbor_right = NodePath(".")
mouse_filter = 2
theme = ExtResource("1_cjkii")
theme_override_colors/font_color = Color(0.533333, 0.752941, 0.439216, 1)
theme_override_colors/font_pressed_color = Color(0.878431, 0.972549, 0.815686, 1)
theme_override_colors/font_hover_color = Color(0.878431, 0.972549, 0.815686, 1)
theme_override_colors/font_focus_color = Color(0.878431, 0.972549, 0.815686, 1)
theme_override_colors/font_hover_pressed_color = Color(0.878431, 0.972549, 0.815686, 1)
action_mode = 0
text = "Catalogue"

[node name="Map" type="Button" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Finish")
mouse_filter = 2
theme_override_colors/font_color = Color(0.533333, 0.752941, 0.439216, 1)
theme_override_colors/font_pressed_color = Color(0.878431, 0.972549, 0.815686, 1)
theme_override_colors/font_hover_color = Color(0.878431, 0.972549, 0.815686, 1)
theme_override_colors/font_focus_color = Color(0.878431, 0.972549, 0.815686, 1)
theme_override_colors/font_hover_pressed_color = Color(0.878431, 0.972549, 0.815686, 1)
action_mode = 0
text = "Map"

[node name="Finish" type="Button" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Map")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Inventory")
mouse_filter = 2
theme_override_colors/font_color = Color(0.533333, 0.752941, 0.439216, 1)
theme_override_colors/font_pressed_color = Color(0.878431, 0.972549, 0.815686, 1)
theme_override_colors/font_hover_color = Color(0.878431, 0.972549, 0.815686, 1)
theme_override_colors/font_focus_color = Color(0.878431, 0.972549, 0.815686, 1)
theme_override_colors/font_hover_pressed_color = Color(0.878431, 0.972549, 0.815686, 1)
action_mode = 0
text = "Finish"

[node name="BackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_aqnkd")
volume_db = -6.0
max_distance = 7415.0
panning_strength = 0.0

[node name="MoveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8fx5q")
volume_db = -6.0
max_distance = 6835.0
panning_strength = 0.0

[connection signal="pressed" from="PanelContainer/VBoxContainer/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Finish" to="." method="_on_finish_pressed"]
